--- a/src/app/course-list/course-list.component.css
+++ b/src/app/course-list/course-list.component.css
@@ -10,10 +10,6 @@
   padding-left: 50px;
   padding-right: 50px;
 }
-
-.wbdv-owner{
-  width: 18.32%;
-}
 .wbdv-last-modified{
   width: 18.32%;
 }
@@ -67,15 +63,12 @@
   width: 9.25%;
 }
 
-.wbdv-grid-layout{
-  width: 10%;
-}
-.wbdv-sort{
-  width: 9.25%;
-}
-.wbdv-list-layout{
-  width: 10%;
-}
+/*.wbdv-sort{*/
+/*  width: 9.25%;*/
+/*}*/
+/*.wbdv-list-layout{*/
+/*  width: 10%;*/
+/*}*/
 .wbdv-empty{
   width: 20%;
 }
