Assignment 8 first commit

--- a/src/app/course-list/course-list.component.html
+++ b/src/app/course-list/course-list.component.html
@@ -121,6 +121,9 @@
       </td>
       <td class="wbdv-row wbdv-last-modified">{{currentDate}}</td>
       <td class="wbdv-empty"></td>
+      <td>
+        <a href="/courses/{{course._id}}/quizzes" style="float: right">Quizzes</a>
+      </td>
     </tr>
     </tbody>
   </table>
