--- a/src/app/true-false-question/true-false-question.component.html
+++ b/src/app/true-false-question/true-false-question.component.html
@@ -51,6 +51,10 @@ Your answer : {{answer}}
 </label>
 <br/>
 <button class="btn btn-primary" (click)="grade()">Grade</button>
+<br/>
+<button (click)="submitAnswer()">
+  Submit Answer
+</button>
 <!--<span [hidden]="answer !== question.correct">Yay!</span>-->
 <!--<span [hidden]="answer !== question.correct">Boo!</span>-->
 
