--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -24,7 +24,7 @@
 
   </li>
 </ul>
-  <button (click)="submitQuiz()">
+  <button class="btn btn-success" (click)="submitQuiz()">
     Submit Quiz
   </button>
 </div>
